fix [空間總覽] [剩餘空間] 1.調整 observable 參數 2.增加 loading 畫面

--- a/src/app/review-room/components/review-room-detail/review-room-detail.component.html
+++ b/src/app/review-room/components/review-room-detail/review-room-detail.component.html
@@ -94,4 +94,10 @@
     </div>
     
 
+    <!-- 畫面 loading 中 -->
+    <div class="loading-container">
+        <app-loading-basic [isLoading]="isLoading">
+        </app-loading-basic>
+    </div>
+
 </div>
