--- a/src/app/booking/components/booking-date-page/booking-date-page.component.html
+++ b/src/app/booking/components/booking-date-page/booking-date-page.component.html
@@ -4,5 +4,7 @@
         (selectDatInfo)="updateSelectDay($event)" 
         (selectDayAllBookingRecord)="updateBookingRecord($event)">
     </app-calendar-picker>
-    <img src="assets/images/icon/icon_next.png" (click)="nextStep()">
+    <div class="btn-bar">
+        <img src="assets/images/icon/icon_next.png" (click)="nextStep()">
+    </div>
 </div>
