--- a/src/app/booking/components/booking-date-page/booking-date-page.component.scss
+++ b/src/app/booking/components/booking-date-page/booking-date-page.component.scss
@@ -6,6 +6,15 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 0;
+
+    .btn-bar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding: 20px 0;
+    }
 }
 
 img {
