--- a/src/app/common/time/component/calendar-picker/calendar-picker.component.scss
+++ b/src/app/common/time/component/calendar-picker/calendar-picker.component.scss
@@ -1,6 +1,9 @@
 
 .calendar-picker {
     width: 350px;
+    border: 1px solid #cfcfcf;
+    border-radius: 1px;
+    
     .calendar-header {                
         background: #661983;
         color: white;
