feat [空間預約/已預約] [行事曆] 1.簡化,拔除冗余 2. subscribe 行事曆抽離

--- a/src/app/booking/components/booking-date-page/booking-date-page.component.html
+++ b/src/app/booking/components/booking-date-page/booking-date-page.component.html
@@ -1,8 +1,8 @@
 
 <div class="container">
     <app-calendar-picker 
-        (selectDatInfo)="updateSelectDay($event)" 
-        (selectDayAllBookingRecord)="updateBookingRecord($event)">
+        (selectDatInfo)="getEmitterSelectDay($event)"
+        [bookingList]="bookingList">
     </app-calendar-picker>
     <div class="btn-bar">
         <img src="assets/images/icon/icon_next.png" (click)="nextStep()">
