--- a/src/app/review-booking/components/review-booking-calendar/review-booking-calendar.component.html
+++ b/src/app/review-booking/components/review-booking-calendar/review-booking-calendar.component.html
@@ -1,8 +1,8 @@
 
 <div class="container">
     <app-calendar-picker 
-        (selectDatInfo)="updateSelectDay($event)" 
-        (selectDayAllBookingRecord)="updateBookingRecord($event)"> 
+        (selectDatInfo)="updateSelectDay($event)"
+        [bookingList]="bookingList"> 
     </app-calendar-picker>
 
     <!-- dialog 該日之 已預約時段 -->
