feat [空間預約/已預約] [行事曆] 取得預約紀錄 loading 畫面

--- a/src/app/review-booking/components/review-booking-calendar/review-booking-calendar.component.html
+++ b/src/app/review-booking/components/review-booking-calendar/review-booking-calendar.component.html
@@ -15,5 +15,11 @@
             [itemList]="dialogBookingRecordItemList">
         </app-dialog>
     </div>
+
+    <!-- 畫面 loading 中 -->
+    <div class="loading-container">
+        <app-loading-basic [isLoading]="isLoading">
+        </app-loading-basic>
+    </div>
     
 </div>
