--- a/src/app/booking/components/booking-date-page/booking-date-page.component.html
+++ b/src/app/booking/components/booking-date-page/booking-date-page.component.html
@@ -7,4 +7,11 @@
     <div class="btn-bar">
         <img src="assets/images/icon/icon_next.png" (click)="nextStep()">
     </div>
+
+    <!-- 畫面 loading 中 -->
+    <div class="loading-container">
+        <app-loading-basic [isLoading]="isLoading">
+        </app-loading-basic>
+    </div>
+
 </div>
