feat [空間預約] 選擇日期 開始,結束時段 存入 service 1

--- a/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
+++ b/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
@@ -12,10 +12,10 @@
         </div>
         <div class="row-time">
             <div>
-                {{ selectDate }}  {{ selectDate | dateToDayOfWeek:"tw" }} {{ startTime }}
+                {{ getSelectDate() }}  {{ getSelectDate() | dateToDayOfWeek:"tw" }} {{ getStartTime() }}
             </div>
             <div>
-                {{ selectDate }}  {{ selectDate | dateToDayOfWeek:"tw" }}  {{ endTime }}
+                {{ getSelectDate() }}  {{ getSelectDate() | dateToDayOfWeek:"tw" }}  {{ getEndTime() }}
             </div>
         </div>
         
