--- a/src/app/common/header/components/header/header.component.html
+++ b/src/app/common/header/components/header/header.component.html
@@ -1,5 +1,8 @@
 <header #header>
-    <img class="img-header" [src]="headerImageUrl">
+    <img class="img-header-main" *ngIf="isMainHeader; else notMainHeader">
+    <ng-template #notMainHeader>
+        <img class="img-header" >
+    </ng-template>
     <div class="header-title">{{ headerTitle }}</div>
     <!-- 上一頁 按鈕需放最下面, 避免被覆蓋 -->
     <img class="img-back" src="assets/images/icon/icon_back.png" (click)="backPage()">
