refactor [空間總覽] [趨勢/剩餘] 1.整理 dialog list 2. fix

--- a/src/app/review-room/components/review-room-detail/review-room-detail.component.html
+++ b/src/app/review-room/components/review-room-detail/review-room-detail.component.html
@@ -89,7 +89,7 @@
             [isHiddenDialog]="isDialogHiddenRoomType"
             (hideDialog)="isDialogHiddenRoomType=true"
             (selectedItem)="selectRoomType($event)"
-            [itemList]="dialogRoomType">
+            [itemList]="dialogRoomTypeList">
         </app-dialog>
     </div>
     
