--- a/src/app/review-room/components/review-room-overview/review-room-overview.component.html
+++ b/src/app/review-room/components/review-room-overview/review-room-overview.component.html
@@ -33,7 +33,7 @@
          (selectedItem)="selectCharTimeModel($event)"
          [isHiddenDialog]="isHiddenDialog"
          (hideDialog)="isHiddenDialog=true"
-         [itemList]="dialogChartTimeItem">
+         [itemList]="dialogChartTimeItemList">
         </app-dialog>
     </div>
 
