--- a/src/app/common/time/component/calendar-picker/calendar-picker.component.scss
+++ b/src/app/common/time/component/calendar-picker/calendar-picker.component.scss
@@ -58,6 +58,11 @@
                         border-radius: 100%;                    
                     }
                 }
+
+                .rate {
+                    color: #661983;
+                    font-size: 15px;
+                }
             }
         }
     }
