build 7 style 調整 header 圖 , 相對路徑 調整

--- a/src/app/auth-route/components/login-page/login-page.component.html
+++ b/src/app/auth-route/components/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <img class="logo-img" src="/assets/images/logo/logo.png">
+    <img class="logo-img" src="assets/images/logo/logo.png">
     <app-img-btn 
         [imgUrl]="'assets/images/button/btn_google-auth.png'" 
         [btnText]="''" (click)="clickSignIn()">
