--- a/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
+++ b/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
@@ -27,7 +27,7 @@
         
         <div class="row" *ngIf="bookingType === 'site'">
             <div class="row-txt">座位</div>
-            <div class="select-item">A105</div>
+            <div class="select-item" (click)="clickSiteShowDialog()">A105</div>
         </div>
     
     </div>
@@ -45,6 +45,18 @@
             [itemList]="dialogRoomList">
         </app-dialog>
     </div>
+
+
+    <!-- dialog 選擇座位 -->
+    <div class="dialog-container">
+        <app-dialog 
+            [dialogTitle]="'選擇座位'"
+            [isHiddenDialog]="isHiddenDialogSite"
+            (hideDialog)="isHiddenDialogSiteInfo=true"
+            [itemList]="dialogSiteList">
+        </app-dialog>
+    </div>
+
 
     <!-- dialog 使用者資訊 -->
     <div class="dialog-container">
