--- a/src/app/booking/components/booking-select-type-page/booking-select-type-page.component.html
+++ b/src/app/booking/components/booking-select-type-page/booking-select-type-page.component.html
@@ -1,12 +1,18 @@
 <div class="home-list-container">
+    
+<!-- 
+    暫時隱藏
     <app-img-btn 
         [imgUrl]="'assets/images/button/button_main.png'" 
         (click)="selectForm('room')"
         [btnText]="'教室預約'">
     </app-img-btn>
+ -->
+
     <app-img-btn 
         [imgUrl]="'assets/images/button/button_main.png'" 
         (click)="selectForm('site')"
         [btnText]="'座位預約'">
     </app-img-btn>
+
 </div>
